added search criterion for GET api and started on email service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=test
 spring.datasource.password=
+
+spring.mail.recipient=abelen1@verizon.net
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=abelen87@terpmail.umd.edu
+spring.mail.password=fxkxokqqwyhrnlcw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
